@@ -93,10 +93,14 @@ Metalink XML file to download.
 .IP "    --metalink-list-file"
 Text file with list of Metalink files to download. The lines starting with '#' are skipped.
 .IP "    --metalink-location"
-Comma-separated list of accepted locations.
+Comma-separated list of accepted countries.
+.IP "    --metalink-print-locations"
+Print full list of valid countries.
 .IP "    --metalink-continent"
 Comma-separated list of accepted continents.
 Valid values are: AF, AS, EU, NA, SA, OC, AN.
+.IP "    --metalink-print-continents"
+Print full list of valid continents.
 .IP "    --metalink-os"
 Operating system of the file to download.
 .IP "    --metalink-language"
